@@ -272,6 +272,10 @@ NbinomFamily <- function(size = 1, prob = 0.5, trafo){
 
 NbinomMeanSizeFamily <- function(size = 1, mean = .5, trafo,
                                  withL2derivDistr = TRUE){
+
+    TQ <- getdistrOption("TruncQuantile")
+    on.exit(distroptions(TruncQuantile=TQ))
+    distroptions(TruncQuantile=1e-8)
     name <- "Negative Binomial family"
     prob.0 <- size/(size+mean)
     distribution <- Nbinom(size = size, prob = size/(size+mean))
@@ -338,8 +342,8 @@ NbinomMeanSizeFamily <- function(size = 1, mean = .5, trafo,
                    mean.0 <- main(param)["mean"]
                    size.0 <- main(param)["size"]
                    prob.00 <- size.0/(size.0+mean.0)
-                   xn <- 1:min(max(max(support(Nbinom(size = size.0, prob = prob.0))),
-                               qnbinom(1e-6,size=size.0,prob=prob.0,lower.tail=FALSE)),
+                   xn <- 1:min(max(max(support(Nbinom(size = size.0, prob = prob.00))),
+                               qnbinom(1e-6,size=size.0,prob=prob.00,lower.tail=FALSE)),
                                1e5)
                    I11 <- -sum((trigamma(xn+size.0)-trigamma(size.0))*dnbinom(xn,size=size.0,prob=prob.00))
                    I12 <- -1/prob.00
